--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,17 +2,17 @@
     <string name="app_name">RateMe</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="great_str">Отлично</string>
-    <string name="good_str">Хорошо</string>
-    <string name="fine_str">Нормально</string>
-    <string name="bad_str">Плохо</string>
-    <string name="awful_str">Ужасно</string>
-    <string name="main_menu_str">Главное меню</string>
-    <string name="start_testing_str">Запуск тестирования</string>
-    <string name="change_point_number_str">Изменить номер точки</string>
-    <string name="set_point_number_str">Добавить номер точки</string>
-    <string name="point_not_set_str">Прежде чем начать тестирование, введите номер точки</string>
-    <string name="cancel_btn_str">Отмена</string>
-    <string name="save_btn_str">Сохранить</string>
-    <string name="set_point_num_dialog_str">Номер точки</string>
+    <string name="great_str">Great</string>
+    <string name="good_str">Good</string>
+    <string name="fine_str">Fine</string>
+    <string name="bad_str">Bad</string>
+    <string name="awful_str">Awful</string>
+    <string name="main_menu_str">Main menu</string>
+    <string name="start_testing_str">Start testing</string>
+    <string name="change_point_number_str">Change point number</string>
+    <string name="set_point_number_str">Add point number</string>
+    <string name="point_not_set_str">If you want to start testing, add point number</string>
+    <string name="cancel_btn_str">Cancel</string>
+    <string name="save_btn_str">Save</string>
+    <string name="set_point_num_dialog_str">Point number</string>
 </resources>
